--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/* 
-? Смартфоны — 320 пикселей, 480 и выше;
-? Планшеты — 768 пикселей и выше;
-? Нетбуки — 1024 (/) пикселей и выше;
-? Мониторы — 1280 (/) пикселей, 1600 (/), 1920 (/) и выше.
-*/
-
 /*Обнуление*/
 *{padding: 0;margin: 0;border: 0;}
 *,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
@@ -23,15 +16,6 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: inherit;font-family: 'Manrope', sans-serif;}
 p,span,div{font-family: 'Manrope', sans-serif;}
 /*--------------------*/
-
-/* fonts 
-
-    Лого:
-        font-family: 'Syncopate', sans-serif;
-    Заголовок, текст:
-        font-family: 'Manrope', sans-serif;
-
-*/
 
 body {
     height: auto;
@@ -656,6 +640,12 @@ input[name="checkbox-accordion"]:checked ~ .accordion__header .accordion__header
     
 }
 
+@media (max-width: 810px) and (min-width: 769px) {
+    .intro__name::after {
+        top: 64%;
+    }
+}
+
 @media (max-width: 768px) {
 
     header {
@@ -706,5 +696,11 @@ input[name="checkbox-accordion"]:checked ~ .accordion__header .accordion__header
     .serdce-cards__img {
         height: 150px;
         width: auto;
+    }
+}
+
+@media (max-width: 455px) {
+    .intro__name::after {
+        top: 64%;
     }
 }
